--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "embla-carousel-react": "^8.5.1",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.344.0",
+    "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-day-picker": "^9.3.2",
     "react-dom": "^18.3.1",
