other income invoice mongodb and dowload invoice button

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.7",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "pdfkit": "^0.15.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
