--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
-    "mongodb": "^5.7.0"
+    "pdfkit-table": "^0.1.99"
   },
   "devDependencies": {
     "@types/express": "^5.0.0"
