--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.7",
     "jsonwebtoken": "^9.0.2",
-    "pdfkit": "^0.15.1"
+    "pdfkit-table": "^0.1.99"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
