--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,8 @@
     "input-otp": "^1.4.1",
     "lucide-react": "^0.344.0",
     "next-themes": "^0.4.3",
+    "pdfkit": "^0.15.1",
+    "pdfkit-table": "^0.1.99",
     "react": "^18.3.1",
     "react-day-picker": "^9.3.2",
     "react-dom": "^18.3.1",
