--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://127.0.0.1:27017/society-manager
+MONGODB_URI=mongodb+srv://parth160:123@cluster0.54rkf.mongodb.net/DashStack
 JWT_SECRET=MySecretKey
 PORT=8001
