role based login done and new user can register and login

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 MONGODB_URI=mongodb+srv://parth160:123@cluster0.54rkf.mongodb.net/DashStack
-JWT_SECRET=MySecretKey
+JWT_SECRET=your-secret-key-here
 PORT=8001
