--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,6 +68,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^8.56.0",
+    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "@testing-library/jest-dom": "^6.6.3",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
