--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,12 +50,12 @@
     "embla-carousel-react": "^8.5.1",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.344.0",
+    "multer": "^1.4.5-lts.1",
     "next-themes": "^0.4.3",
     "pdfkit": "^0.15.1",
     "pdfkit-table": "^0.1.99",
-    "react": "^18.3.1",
-    "react-day-picker": "^9.3.2",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
@@ -72,11 +72,11 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -84,7 +84,7 @@
     "globals": "^13.24.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
-    "vite": "^5.4.2"
+    "typescript": "^5.0.2",
+    "vite": "^4.5.0"
   }
 }
