--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
+    "multer": "^1.4.5-lts.1",
     "pdfkit": "^0.15.1",
     "pdfkit-table": "^0.1.99"
   },
