--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "pdfkit": "^0.15.1",
     "pdfkit-table": "^0.1.99"
   },
